[project]
name = "utiilityes"
version = "0.2.2"
description = "Una libreria Python per creare GUI moderne basate su SDL2"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "Domenico Ruffa" }
]

keywords = ["gui", "sdl2", "graphics", "python", "interface"]
dependencies = [
    "PySDL2>=0.9.16"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["utiilityes"]

[project.urls]

Repository = "https://github.com/DeMENIGECO/utiilityes"


